--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: mobkit_generator
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+repository: https://github.com/Biscozum/mobkitgenerator
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
