--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: mobkit_generator
-description: A new Flutter package project.
+description: Flutter Code Generation.
 version: 0.0.1
 repository: https://github.com/Biscozum/mobkitgenerator
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '>=2.18.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
