--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,7 +31,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  mobkit_enum_generator:
+      path: C:/Users/burakhang/Desktop/ProjectsGIT/mobkit_enum_generator
+  json_serializable: ^6.3.1
+  json_annotation: ^4.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -53,6 +57,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
