--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,19 @@
 name: mobkit_enum_generator
-description: Provides Dart Build System builders for handling Enum.
-version: 0.0.3
+description: Provides Dart Build System builders for handling Enum. You can get values ​and descriptions from your enums.
+version: 0.0.4
 repository: https://github.com/Biscozum/mobkitgenerator
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
   flutter: ">=1.17.0"
+
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
 
 dependencies:
   flutter:
