--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,8 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  mobkit_enum_generator:
-      path: C:/Users/burakhang/Desktop/ProjectsGIT/mobkit_enum_generator
+  mobkit_enum_generator: ^0.0.5
   json_serializable: ^6.3.1
   json_annotation: ^4.6.0
 
