--- a/build.yaml
+++ b/build.yaml
@@ -8,4 +8,5 @@ builders:
     build_extensions: {".dart": ["library_source.g.dart"]}
     auto_apply: dependents
     build_to: cache
-    applies_builders: ["source_gen|combining_builder"]
+    applies_builders: ["source_gen:combining_builder"]
+    runs_before: ["source_gen:combining_builder"]
