--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,9 +31,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  mobkit_enum_generator: ^0.0.8
-  json_serializable: ^6.3.1
-  json_annotation: ^4.6.0
+  mobkit_enum_generator: 
+    path: ../
+  json_serializable: ^6.7.0
+  json_annotation: ^4.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
